# -Efficient-Expression-Placement-through-Lazy-Code-Motion-in-LLVM

./: README.md
Readme/: Installing LLVM - 17.0.6.txt  Readme on how to run.txt  Removing LLVM 18.txt  Running -O0 vs -O1.txt  Terminal Ouput.txt
Vinodh_Punitha/: CMakeLists.txt  Makefile  unifiedpass.cpp
Vinodh_Punitha/Tests/: test.O0.no-optnone.bc  test.c  test.lcm-E.ll  test.lcm-L.ll  test.mem2reg.bc  test.mem2reg.ll  test2.O0.no-optnone.bc  test2.c  test2.lcm-L.ll  test2.mem2reg.bc  test2.mem2reg.ll  test3.O0.no-optnone.bc  test3.c  test3.lcm-E.ll  test3.lcm-L.ll  test3.mem2reg.bc  test3.mem2reg.ll  test4.O0.no-optnone.bc  test4.c  test4.lcm-E.ll  test4.lcm-L.ll  test4.mem2reg.bc  test4.mem2reg.ll  test5.O0.no-optnone.bc  test5.c  test5.lcm-E.ll  test5.lcm-L.ll  test5.mem2reg.bc  test5.mem2reg.ll  test6.O0.no-optnone.bc  test6.c  test6.lcm-E.ll  test6.mem2reg.bc  test6.mem2reg.ll  test7.O0.lcm-final.ll  test7.O0.no-optnone.b  test7.O0.no-optnone.bc  test7.O1.lcm-final.ll  test7.O1.ll  test7.O1.mem2reg.bc  (+25 more)
